Fix spacing

--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -19,7 +19,6 @@
 .body {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
 }
 
 .title {
